--- a/practice/src/main/res/values/strings.xml
+++ b/practice/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources >
-    <string name="app_name" >practice</string >
+
+    <string name="no_matching_results" >没有匹配结果.</string >
+    <string name="the_results_of" >结果</string >
+    <string name="degree_of_confidence" >置信度</string >
+    <string name="beyond_the_valid_value_range" >超出有效值范围</string >
+    <string name="you_can_only_enter_numbers" >只能输入数字</string >
+    <string name="open_corresponding_permissions" >请到设置-应用权限管理界面 开启相应权限再进行尝试</string >
+    <string name="boot_failure" >启动失败</string >
+    <string name="action_share" >分享</string >
+     <string name="i_know" >我知道了</string >
+    <string name="loading" >正在加载...</string >
+
+
 </resources >
